Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-21973

'read_registry' is not a recognized replace function

XMLWordPrintable

    • Windows
    • 08e1fbbbfa8760e94922d69ab7397af64370081a (qt-creator/qt-creator/4.9)

      Since Qt 5.12.1, a handy replace function named read_registry() was added to qmake on Windows host.

      However, it seems that the Qt Creator's built-in project parser does not support this function. Every time when I open or save a pro file which contains the read_registry() function, the "General Message" panel will print a warning:

      <path to pro file>: 'read_registry' is not a recognized replace function.

       

        For Gerrit Dashboard: QTCREATORBUG-21973
        # Subject Branch Project Status CR V

            kandeler Christian Kandeler
            gpbeta Joshua GPBeta
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes