qmake: add $$read_registry() function

Fixes: QTCREATORBUG-21973
Written-by: Oswald Buddenhagen <oswald.buddenhagen@qt.io>
Reviewed-by: Simon Hausmann <simon.hausmann@qt.io>
(cherry-picked from qtbase/f89ac0101ad4a6cb5339a3bfe132aad897eafc9d)
Change-Id: I6f67eec7c715686074dd3bdc121170c26daf56da
Reviewed-by: Joerg Bornemann <joerg.bornemann@qt.io>